fixed spacing on sections

--- a/css/layout.css
+++ b/css/layout.css
@@ -60,7 +60,7 @@ html {
 .content-box,
 #tourdates {
   max-width: 1080px;
-  margin: 30px auto;
+  margin: 10px auto 30xp auto;
   padding: 25px 30px;
   background-color: #fff;
   border: 3.5px solid #d9a79b;
@@ -111,7 +111,7 @@ html {
 .content-container {
   display: flex;
   align-items: flex-start;
-  gap: 20px;
+  gap: 0px;
   margin: 20px;
 }
 
